environments/aio/keycloak/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-proxy
spec:
  headers:
    # HTTPS termina en Cloudflare; el salto del túnel a Traefik usa HTTP.
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Forwarded-Port: "443"
      X-Forwarded-Host: keycloak-aio.eduhamuy.com
