environments/aio/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: eduhamuy-identity-aio-keycloak-proxy@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak-aio.eduhamuy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
